cocktail.ui: z-index fix for Autocomplete

--- a/cocktail/ui/resources/styles/cocktail-ui-autocomplete.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-autocomplete.scss
@@ -33,6 +33,7 @@
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: $panel-shadow;
+    z-index: 1;
 
     :host(:not([panelVisible='true'])) & {
         display: none;
